--- a/aur-repo/kicad-hq/lilac.yaml
+++ b/aur-repo/kicad-hq/lilac.yaml
@@ -7,3 +7,15 @@ update_on:
     aur: kicad-hq
   - source: manual
     manual: 1
+# maintainers:
+#   - github: taotieren
+# build_prefix: extra-x86_64
+# pre_build_script: |
+#   update_pkgver_and_pkgrel(_G.newver)
+# post_build_script: |
+#   git_pkgbuild_commit()
+#   update_aur_repo()
+# update_on:
+#   - source: gitlab
+#     gitlab: kicad-hq/kicad
+#     use_max_tag: true
