--- a/aur-repo/vnt-git/PKGBUILD
+++ b/aur-repo/vnt-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=vnt-git
-pkgver=1.2.10.2.r8.ge36e450
+pkgver=1.2.15.r0.g501a9e8
 pkgrel=1
 pkgdesc="A virtual network tool (or VPN),简便高效的异地组网、内网穿透工具"
 arch=(x86_64
