--- a/aur-repo/magiskboot-git/PKGBUILD
+++ b/aur-repo/magiskboot-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=magiskboot-git
 pkgname=magiskboot-git
-pkgver=28001.73.r7.g2b1a269
+pkgver=28001.73.r8.g9de7197
 pkgrel=1
 pkgdesc="Magiskboot_ndk"
 arch=(x86_64
