finalshell: auto updated to 4.5.12-2

--- a/aur-repo/finalshell/PKGBUILD
+++ b/aur-repo/finalshell/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=finalshell
 pkgver=4.5.12
-pkgrel=1
+pkgrel=2
 pkgdesc="FinalShell是一体化的的服务器,网络管理软件,不仅是ssh客户端,还是功能强大的开发,运维工具,充分满足开发,运维需求."
 url="https://www.hostbuf.com/"
 arch=("x86_64" "aarch64" "loong64")
@@ -27,13 +27,13 @@ prepare() {
 }
 
 package() {
-    install -Dm644 usr/lib/finalshell/lib/FinalShell.png     "$pkgdir/usr/share/icons/hicolor/scalable/apps/FinalShell.png"
-    install -Dm644 FinalShell.desktop "$pkgdir/usr/share/applications/FinalShell.desktop"
-    rm -rf usr/lib/finalshell/lib/FinalShell.png usr/lib/finalshell/lib/finalshell-FinalShell.desktop
+    install -Dm644 "${srcdir}/usr/lib/finalshell/lib/FinalShell.png"     "${pkgdir}/usr/share/icons/hicolor/scalable/apps/FinalShell.png"
+    install -Dm644 "${srcdir}/FinalShell.desktop" "${pkgdir}/usr/share/applications/FinalShell.desktop"
+    rm -rf "${srcdir}/usr/lib/finalshell/lib/FinalShell.png" "${srcdir}/usr/lib/finalshell/lib/finalshell-FinalShell.desktop"
 
-    install -dm755 "$pkgdir/usr/lib"
-    rsync -rq --delete $srcdir/usr/lib/finalshell "$pkgdir/usr/lib"
+    install -dm755 "${pkgdir}/usr/lib"
+    rsync -rq --delete "${srcdir}/usr/lib/finalshell" "${pkgdir}/usr/lib"
 
-    install -dm755 "$pkgdir/usr/bin"
-    ln -sf "${pkgdir}/usr/lib/finalshell/bin/FinalShell" "${pkgdir}/usr/bin/FinalShell"
+    install -dm755 "${pkgdir}/usr/bin"
+    ln -sf "/usr/lib/finalshell/bin/FinalShell" "${pkgdir}/usr/bin/FinalShell"
 }
