python-cmsis-pack-manager: auto updated to rust.0.7.0.r1.ga312ce0-1

--- a/aur-repo/python-cmsis-pack-manager/PKGBUILD
+++ b/aur-repo/python-cmsis-pack-manager/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=python-cmsis-pack-manager
 _name="${pkgname#python-}"
-pkgver=0.5.3
-pkgrel=3
+pkgver=rust.0.7.0.r1.ga312ce0
+pkgrel=1
 pkgdesc="A Rust and Python module for handling CMSIS Pack files"
 arch=(x86_64)
 url="https://github.com/pyocd/cmsis-pack-manager"
