--- a/aur-repo/python-pyocd/lilac.yaml
+++ b/aur-repo/python-pyocd/lilac.yaml
@@ -11,6 +11,7 @@ repo_depends:
 update_on:
   - source: github
     github: pyocd/pyOCD
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
   - alias: python
+# use_latest_release: true
