--- a/aur-repo/serial-studio/PKGBUILD
+++ b/aur-repo/serial-studio/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=serial-studio
 _pkgname=Serial-Studio
-pkgver=2.0.0
-pkgrel=20
+pkgver=3.0.6
+pkgrel=1
 pkgdesc="Multi-purpose serial data visualization & processing program"
 arch=('x86_64'
     'aarch64'
@@ -43,6 +43,15 @@ sha256sums=('SKIP'
     'SKIP'
     'SKIP')
 noextract=()
+
+pkgver() {
+    cd "${srcdir}/${pkgname}"
+    (
+        set -o pipefail
+        git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+    )
+}
 
 prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
