--- a/aur-repo/serverstatus-git/PKGBUILD
+++ b/aur-repo/serverstatus-git/PKGBUILD
@@ -5,8 +5,8 @@ pkgname=(serverstatus-git
     serverstatus-clients-linux-git
     serverstatus-clients-psutil-git
     serverstatus-server-git)
-pkgver=1.1.5.r7.gfa0ee2b
-pkgrel=3
+pkgver=1.1.5.r12.gb0c543b
+pkgrel=1
 groups=()
 pkgdesc="云探针、多服务器探针、云监控、多服务器云监控"
 arch=(any)
