--- a/aur-repo/mesaflash-git/PKGBUILD
+++ b/aur-repo/mesaflash-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=mesaflash-git
-pkgver=3.4.9.r20.g8d3746f
-pkgrel=25
+pkgver=3.4.9.r21.gefbbe21
+pkgrel=1
 pkgdesc="Configuration and diagnostic tool for Mesa Electronics PCI(E)/ETH/EPP/USB/SPI boards"
 arch=('i686' 'x86_64')
 url="https://github.com/LinuxCNC/mesaflash"
