--- a/aur-repo/hpmicro-manufacturing-tool-bin/lilac.yaml
+++ b/aur-repo/hpmicro-manufacturing-tool-bin/lilac.yaml
@@ -1,12 +1,9 @@
 maintainers:
   - github: taotieren
-
 build_prefix: extra-x86_64
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 update_on:
   - source: github
     github: hpmicro/hpm_manufacturing_tool
@@ -15,15 +12,17 @@ update_on:
 
 # maintainers:
 #   - github: taotieren
-#
 # build_prefix: extra-x86_64
-#
-# pre_build: aur_pre_build
-#
-# pre_build_script: aur_pre_build(maintainers=['taotieren'])
-#
-# post_build: aur_post_build
-#
+# pre_build_script: |
+#   update_pkgver_and_pkgrel(_G.newver)
+# post_build_script: |
+#   git_pkgbuild_commit()
+#   update_aur_repo()
 # update_on:
-#   - source: aur
-#     aur: clouddrive
+#   - source: github
+#     github: cloud-fs/cloud-fs.github.io
+#     use_latest_release: true
+#     prefix: v
+
+# use_max_tag: true
+# prefix: v
