--- a/aur-repo/hpmicro-manufacturing-tool-bin/PKGBUILD
+++ b/aur-repo/hpmicro-manufacturing-tool-bin/PKGBUILD
@@ -30,7 +30,7 @@ optdepends=()
 source=("${_pkgname}_v${pkgver}.tar.gz::${url}/releases/download/v${pkgver}/${_pkgname}_v${pkgver}.tar.gz"
     "hpmicro.png")
 sha256sums=('8a4bea2589138e5b473db1ff3853afb49c9867583f4382cd21472b24f0018f81'
-    '07d6adc954e732986889ddbc8e972a69404b0097be541f61f0e23e0521a79e7f')
+            '07d6adc954e732986889ddbc8e972a69404b0097be541f61f0e23e0521a79e7f')
 options=('!strip' '!debug' '!lto')
 
 package() {
@@ -56,9 +56,11 @@ SUBSYSTEM!="usb|tty|hidraw", GOTO="hpmicro_rules_end"
 
 # Arch Linux hpmicro
 ATTRS{idVendor}=="c251", MODE="0666", GROUP="uucp", TAG+="uaccess"
+ATTRS{idVendor}=="34b7",MODE="0666",GROUP="uucp", TAG+="uaccess"
 
 # Debian/Ubuntu Linux hpmicro
 # ATTRS{idVendor}=="c251", MODE="0666", GROUP="dialout", TAG+="uaccess"
+# ATTRS{idVendor}=="34b7", MODE="0666", GROUP="dialout", TAG+="uaccess"
 
 LABEL="hpmicro_rules_end"
 EOF
