--- a/aur-repo/pyinstaller/lilac.yaml
+++ b/aur-repo/pyinstaller/lilac.yaml
@@ -1,14 +1,10 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers=['yochananmarqos'])
-
+pre_build_script: aur_pre_build(maintainers=['envolution'])
 post_build: aur_post_build
-
 repo_depends:
   - python-altgraph
   - pyinstaller-hooks-contrib
-
 update_on:
   - source: aur
     aur: pyinstaller
