--- a/aur-repo/pyinstaller/PKGBUILD
+++ b/aur-repo/pyinstaller/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: 
+# Maintainer: envolution
 # Contributor: Mark Wagie <mark dot wagie at proton dot me>
 # Contributor: Sam <dev at samarthj dot com>
 # Contributor: Mehmet Ozgur Bayhan <mozgurbayhan at gmail.com>
@@ -6,8 +6,8 @@
 # Contributor: iboyperson <tjquillan at gmail dot com>
 # Contributor: Alessandro Pazzaglia <jackdroido at gmail dot com>
 pkgname=pyinstaller
-pkgver=6.10.0
-pkgrel=3
+pkgver=6.11.1
+pkgrel=2
 pkgdesc="Bundles a Python application and all its dependencies into a single package"
 arch=('x86_64')
 url="https://www.pyinstaller.org"
@@ -33,7 +33,7 @@ makedepends=(
 optdepends=('python-argcomplete: tab completion for CLI tools')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/pyinstaller/pyinstaller/archive/refs/tags/v$pkgver.tar.gz"
         'fortify-source-fix.diff')
-sha256sums=('1d077ed96b4123e05a55b3777c9beda08465f703fdcea170428d7a825e3097cc'
+sha256sums=('e0a46e918325b65349beaec43a760f9b0b6270a838fb24cd585d5ddbd4232f58'
             '46f7cfd082570a3f4c138a868e55dc39deacccbff602ce7e70d033236566fa1b')
 
 prepare() {
@@ -49,6 +49,7 @@ prepare() {
 }
 
 build() {
+  ls
   cd "$pkgname-$pkgver"
   python -m build --wheel --no-isolation
 }
@@ -71,3 +72,5 @@ package() {
   install -Dm644 COPYING.txt -t "$pkgdir/usr/share/licenses/$pkgname/"
   install -Dm644 README.rst -t "$pkgdir/usr/share/doc/$pkgname/"
 }
+
+# vim: ts=2 sw=2 et:
