--- a/aur-repo/alist/lilac.yaml
+++ b/aur-repo/alist/lilac.yaml
@@ -1,14 +1,7 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='sukanka')
-
 post_build: aur_post_build
-
 update_on:
-  - source: github
-    github: alist-org/alist
-    use_max_tag: true
-    prefix: v
   - source: aur
-    github: alist
+    aur: alist
