--- a/aur-repo/pyqt5-chart/PKGBUILD
+++ b/aur-repo/pyqt5-chart/PKGBUILD
@@ -9,7 +9,7 @@ pkgdesc='Python bindings for QtCharts'
 arch=(x86_64)
 url='https://www.riverbankcomputing.com/software/pyqtchart/intro'
 license=(GPL3)
-groups=(pyqt5)
+groups=()
 depends=(qt5-charts python-pyqt5)
 makedepends=(sip pyqt-builder)
 conflicts=(python-pyqtchart)
@@ -27,7 +27,7 @@ build() {
   make
 }
 
-package_python-pyqt5-chart(){
+package_python-pyqt5-chart() {
   cd PyQtChart-$pkgver/build
   make INSTALL_ROOT="$pkgdir" install
 }
