--- a/aur-repo/rttview/lilac.yaml
+++ b/aur-repo/rttview/lilac.yaml
@@ -11,7 +11,8 @@ repo_depends:
 update_on:
   - source: github
     github: XIVN1987/RTTView
-    use_max_tag: true
+    use_latest_release: true
+  - alias: python
     # prefix: v
     # use_latest_release: true
-  - alias: python
+    # use_max_tag: true
