--- a/aur-repo/coreboot-utils-git/lilac.yaml
+++ b/aur-repo/coreboot-utils-git/lilac.yaml
@@ -1,23 +1,16 @@
 maintainers:
   - github: taotieren
-
-# pre_build_script: aur_pre_build(maintainers=['anatolik', 'mytbk'])
-#
-# post_build: aur_post_build
-#
-# update_on:
-#   - source: aur
-#     github: coreboot-utils-git
-
-build_prefix: extra-x86_64
-
-pre_build: vcs_update
-
-post_build_script: |
-  git_pkgbuild_commit()
-
+pre_build_script: aur_pre_build(maintainers=['anatolik', 'mytbk'])
+post_build: aur_post_build
 update_on:
-  - source: git
-    git: https://review.coreboot.org/coreboot.git
-    branch: master
-    use_commit: true
+  - source: aur
+    github: coreboot-utils-git
+# build_prefix: extra-x86_64
+# pre_build: vcs_update
+# post_build_script: |
+#   git_pkgbuild_commit()
+# update_on:
+#   - source: git
+#     git: https://review.coreboot.org/coreboot.git
+#     branch: master
+#     use_commit: true
