--- a/aur-repo/purc/lilac.yaml
+++ b/aur-repo/purc/lilac.yaml
@@ -1,20 +1,16 @@
 maintainers:
   - github: taotieren
-
 build_prefix: extra-x86_64
-
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 # repo_depends:
 #   - mysql
-
 update_on:
   - source: github
     github: HVML/PurC
-    use_max_tag: true
+    use_latest_release: true
     prefix: ver-
+    # use_max_tag: true
