--- a/aur-repo/python-comtool-git/PKGBUILD
+++ b/aur-repo/python-comtool-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-comtool-git
-pkgver=3.4.1.r11.g3f6acaf
-pkgrel=4
+pkgver=3.4.1.r13.g2a958d8
+pkgrel=1
 epoch=
 pkgdesc="A cross platform serial debug tools written by python"
 arch=('any')
