--- a/aur-repo/gowin-eda/lilac.yaml
+++ b/aur-repo/gowin-eda/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='yjun')
-
 post_build: aur_post_build
-
 update_on:
   - source: aur
-    github: gowin-eda
+    aur: gowin-eda
