--- a/aur-repo/python-cmsis-pack-manager/lilac.yaml
+++ b/aur-repo/python-cmsis-pack-manager/lilac.yaml
@@ -8,6 +8,6 @@ post_build_script: |
 update_on:
   - source: github
     github: pyocd/cmsis-pack-manager
-    # use_latest_release: true
-    # prefix: v
+    use_latest_release: true
+    prefix: v
   - alias: python
