--- a/aur-repo/bitwig-studio/PKGBUILD
+++ b/aur-repo/bitwig-studio/PKGBUILD
@@ -4,7 +4,7 @@
 pkgname='bitwig-studio'
 pkgver='5.2.7'
 _pkgver='5.2.7'
-pkgrel='1'
+pkgrel=2
 pkgdesc='Digital audio workstation for music production, remixing and live performance'
 arch=('x86_64')
 url='https://www.bitwig.com/'
