--- a/aur-repo/gowin-eda-edu/PKGBUILD
+++ b/aur-repo/gowin-eda-edu/PKGBUILD
@@ -1,17 +1,17 @@
 # Maintainer: yjun <jerrysteve1101 at gmail dot com>
 
 pkgbase=gowin-eda-edu
-pkgver=1.9.9Beta_4
-pkgrel=3
+pkgver=1.9.10.03
+pkgrel=1
 _desc="Gowin EDA, an easy to use integrated design environment provides design engineers one-stop solution from design entry to verification. (education version)"
 arch=('x86_64')
 url="http://www.gowinsemi.com.cn/faq.aspx"
 # url="https://www.gowinsemi.com/en/support/home/"
 license=('unknown')
-source=("http://cdn.gowinsemi.com.cn/Gowin_V${pkgver/_/-}_Education.tar.gz"
+source=("http://cdn.gowinsemi.com.cn/Gowin_V${pkgver/_/-}_Education_linux.tar.gz"
         "${pkgbase}-ide.desktop"
         "${pkgbase}-programmer.desktop")
-sha256sums=('14a47450180987d13a9833d2aeb23081a9c484f9ad521288999d5ae651e46935'
+sha256sums=('1cd0b9ce86897509b12f05bebd0ec2a7b193b7168c37d82676584e9211a6e2fa'
             '4f833de574e9c16fbe7c321bb1d7ad5be166744bc513e60ec3cae79885732ec1'
             '6f7957416ab06a8f2fe447663cfb9873fe2c6f213b6b93075bc416b02473c386')
 
