--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=deeplx-git
-pkgver=0.9.8.3.r0.gede6229
-pkgrel=2
+pkgver=1.0.1.r0.gb04139e
+pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
 arch=(x86_64
     aarch64
