--- a/aur-repo/autofilm/PKGBUILD
+++ b/aur-repo/autofilm/PKGBUILD
@@ -5,9 +5,7 @@ _name=AutoFilm
 pkgver=1.2.5
 pkgrel=0
 pkgdesc="A small project to provide Strm direct-link playback for Emby and Jellyfin servers, recommended for use with MediaWarp."
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=(any)
 url="https://github.com/Akimio521/AutoFilm"
 license=('AGPL-3.0-only')
 provides=(${pkgname})
