--- a/aur-repo/hbdinetd-git/PKGBUILD
+++ b/aur-repo/hbdinetd-git/PKGBUILD
@@ -32,28 +32,34 @@ options=()
 
 pkgver() {
     cd "${srcdir}/${pkgname%-git}/"
-#     git describe --long --tags | sed 's/ver.//g;s/\([^-]*-g\)/r\1/;s/-/./g'
+    #     git describe --long --tags | sed 's/ver.//g;s/\([^-]*-g\)/r\1/;s/-/./g'
     printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname%-git}" clean -dfx
 }
 
 build() {
+    export LDFLAGS="-L/lib64"
+    if test -n "$LD_LIBRARY_PATH"; then
+        export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/lib64"
+    else
+        export LD_LIBRARY_PATH=/lib64
+    fi
     cd "${srcdir}/${pkgname%-git}"
 
     sed -i 's|{HBDINETD_APP_INSTALL_DIR}/sbin/|{CMAKE_INSTALL_PREFIX}/bin|g' source/${pkgbase%-git}/CMakeLists.txt
-#    sed -i 's|{HBDINETD_APP_INSTALL_DIR}|{CMAKE_INSTALL_PREFIX}/\${HBDINETD_APP_INSTALL_DIR}|g' source/${pkgbase%-git}/PlatformLinux.cmake
+    #    sed -i 's|{HBDINETD_APP_INSTALL_DIR}|{CMAKE_INSTALL_PREFIX}/\${HBDINETD_APP_INSTALL_DIR}|g' source/${pkgbase%-git}/PlatformLinux.cmake
 
-# see：https://wiki.archlinux.org/title/CMake_package_guidelines
-#     cmake -DCMAKE_BUILD_TYPE=Release \
+    # see：https://wiki.archlinux.org/title/CMake_package_guidelines
+    #     cmake -DCMAKE_BUILD_TYPE=Release \
     cmake -DCMAKE_BUILD_TYPE=None \
         -DPORT=Linux \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_INSTALL_LIBDIR=lib \
         -DCMAKE_INSTALL_LIBEXECDIR=lib \
+        -Wno-dev \
         -B build \
         -G Ninja
 
