--- a/aur-repo/hbdbus-git/PKGBUILD
+++ b/aur-repo/hbdbus-git/PKGBUILD
@@ -35,17 +35,22 @@ pkgver() {
     git describe --long --tags | sed 's/ver.//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname%-git}" clean -dfx
 }
 
 build() {
+    export LDFLAGS="-L/lib64"
+    if test -n "$LD_LIBRARY_PATH"; then
+        export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/lib64"
+    else
+        export LD_LIBRARY_PATH=/lib64
+    fi
     cd "${srcdir}/${pkgname%-git}"
 
     sed -i 's|{SYSEXEC_INSTALL_DIR}|{CMAKE_INSTALL_PREFIX}/bin|g' source/hbdbus/CMakeLists.txt
-# see：https://wiki.archlinux.org/title/CMake_package_guidelines
-#     cmake -DCMAKE_BUILD_TYPE=Release \
+    # see：https://wiki.archlinux.org/title/CMake_package_guidelines
+    #     cmake -DCMAKE_BUILD_TYPE=Release \
     cmake -DCMAKE_BUILD_TYPE=None \
         -DPORT=Linux \
         -DCMAKE_INSTALL_PREFIX=/usr \
