--- a/aur-repo/realtime-generic-setup/lilac.yaml
+++ b/aur-repo/realtime-generic-setup/lilac.yaml
@@ -1,7 +1,18 @@
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['redtide'])
+# post_build: aur_post_build
+# update_on:
+#   - source: github
+#     github: redtide/archlinux-realtime-generic-setup
+#   - source: aur
+#     aur: realtime-generic-setup
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['redtide'])
-post_build: aur_post_build
+build_prefix: extra-x86_64
+pre_build: vcs_update
+post_build_script: |
+  git_pkgbuild_commit()
 update_on:
-  - source: aur
-    aur: realtime-generic-setup
+  - source: github
+    github: redtide/archlinux-realtime-generic-setup
