--- a/aur-repo/msp-flasher/lilac.yaml
+++ b/aur-repo/msp-flasher/lilac.yaml
@@ -4,4 +4,4 @@ pre_build_script: aur_pre_build(maintainers=['ivanovp'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    github: msp-flasher
+    aur: msp-flasher
