--- a/aur-repo/xdroid-bin/lilac.yaml
+++ b/aur-repo/xdroid-bin/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers=['taotieren', 'little_sheepycn'])
-
+pre_build_script: aur_pre_build(maintainers=['taotieren', 'little_sheepycn', 'jinzhongjia', 'anonymoususer001', 'shmilee'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: xdroid-bin
