--- a/aur-repo/linux-gpib/lilac.yaml
+++ b/aur-repo/linux-gpib/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['Foucault'])
 post_build: aur_post_build
+repo_depends:
+  - fxload
 update_on:
   - source: aur
     aur: linux-gpib
