--- a/aur-repo/coreboot-utils/lilac.yaml
+++ b/aur-repo/coreboot-utils/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='slact')
-
 post_build: aur_post_build
-
 update_on:
   - source: aur
-    github: coreboot-utils
+    aur: coreboot-utils
