--- a/aur-repo/edid-decode-git/lilac.yaml
+++ b/aur-repo/edid-decode-git/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='net147')
-
+pre_build_script: aur_pre_build(maintainers=['net147'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: edid-decode-git
