--- a/aur-repo/wch-bleuart/lilac.yaml
+++ b/aur-repo/wch-bleuart/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='taotieren')
-
 post_build: aur_post_build
-
 update_on:
   - source: aur
-    github: wch-bleuart
+    aur: wch-bleuart
