v4l-utils-git: auto updated to 1.28.1.r56.gc4329c05-1

--- a/aur-repo/v4l-utils-git/PKGBUILD
+++ b/aur-repo/v4l-utils-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Chocobo1 <chocobo1 AT archlinux DOT net>
 
 pkgname=v4l-utils-git
-pkgver=1.28.1.r52.g363495b6
-pkgrel=2
+pkgver=1.28.1.r56.gc4329c05
+pkgrel=1
 pkgdesc="Userspace tools and conversion library for Video 4 Linux"
 arch=('i686' 'x86_64')
 url="https://linuxtv.org/"
