--- a/aur-repo/candevstudio-git/lilac.yaml
+++ b/aur-repo/candevstudio-git/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['fenugrec'])
 post_build: aur_post_build
+repo_depends:
+  - qt5-serialbus
 update_on:
   - source: aur
     aur: candevstudio-git
