--- a/aur-repo/rttview/lilac.yaml
+++ b/aur-repo/rttview/lilac.yaml
@@ -11,7 +11,7 @@ repo_depends:
 update_on:
   - source: github
     github: XIVN1987/RTTView
-    use_latest_release: true
+    use_max_tag: true
   - alias: python
     # prefix: v
     # use_latest_release: true
