--- a/aur-repo/qt5-serialbus-git/lilac.yaml
+++ b/aur-repo/qt5-serialbus-git/lilac.yaml
@@ -1,7 +1,7 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['andreas_baumann'])
+pre_build_script: aur_pre_build(maintainers=['Chocobo1'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    aur: qt5-serialbus
+    aur: qt5-serialbus-git
