--- a/aur-repo/python-cu2qu-git/PKGBUILD
+++ b/aur-repo/python-cu2qu-git/PKGBUILD
@@ -8,10 +8,10 @@ url='https://github.com/googlefonts/cu2qu'
 license=('Apache')
 arch=(any)
 _pydeps=(defcon
-         fonttools
-         fs)
+    fonttools
+    fs)
 depends=(python
-         "${_pydeps[@]/#/python-}")
+    "${_pydeps[@]/#/python-}")
 makedepends=(cython
     git
     python-{build,installer,wheel}
@@ -28,8 +28,7 @@ pkgver() {
     git describe --long --tags | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
@@ -47,4 +46,3 @@ package() {
     cd "$pkgname"
     python -m installer -d "$pkgdir" dist/*.whl
 }
-
