--- a/aur-repo/python-cffsubr-git/PKGBUILD
+++ b/aur-repo/python-cffsubr-git/PKGBUILD
@@ -5,11 +5,13 @@ pkgver=0.2.9.post1.r2.g2a3b91f
 pkgrel=1
 pkgdesc='Standalone CFF subroutinizer based on AFDKO tx'
 url='https://github.com/adobe-type-tools/cffsubr'
-license=('Apache')
+license=('Apache-2.0')
 arch=(any)
-depends=(python
+depends=(
+    python
     python-fonttools)
-makedepends=(python-setuptools-git-ls-files
+makedepends=(
+    python-setuptools-git-ls-files
     python-setuptools-scm
     python-{build,installer,wheel}
     git)
@@ -24,8 +26,7 @@ pkgver() {
     git describe --long --tags | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
@@ -39,12 +40,11 @@ check() {
     cd "$pkgname"
     # PYTHONPATH=src pytest tests
     local _pyver=$(python -c 'import sys; print("".join(map(str, sys.version_info[:2])))')
-	export PYTHONPATH="$PWD/build/lib.linux-$CARCH-cpython-$_pyver"
-	pytest tests
+    export PYTHONPATH="$PWD/build/lib.linux-$CARCH-cpython-$_pyver"
+    pytest tests
 }
 
 package() {
     cd "$pkgname"
     python -m installer -d "$pkgdir" dist/*.whl
 }
-
