--- a/aur-repo/python-cffsubr-git/lilac.yaml
+++ b/aur-repo/python-cffsubr-git/lilac.yaml
@@ -6,6 +6,7 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 repo_depends:
+  - afdko
   - python-setuptools-git-ls-files-git
 update_on:
   - source: github
