--- a/aur-repo/can-tests-git/PKGBUILD
+++ b/aur-repo/can-tests-git/PKGBUILD
@@ -6,9 +6,7 @@ pkgver=2023.05.0.r5.g3258274
 pkgrel=24
 groups=()
 pkgdesc="Linux-CAN / SocketCAN testing applications"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/linux-can/can-tests"
 license=('GPL-2.0-only' 'BSD-3-Clause')
 provides=(${pkgname%-git})
@@ -28,8 +26,7 @@ pkgver() {
     git describe --long --tags | sed 's/^v//g' | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
