--- a/aur-repo/can-utils-git/PKGBUILD
+++ b/aur-repo/can-utils-git/PKGBUILD
@@ -7,9 +7,7 @@ pkgver=2023.03.r233.g6526683
 pkgrel=4
 groups=()
 pkgdesc="Linux-CAN / SocketCAN user space applications"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/linux-can/can-utils"
 license=('GPL-2.0-only' 'BSD-3-Clause')
 provides=(${pkgname%-git})
@@ -29,8 +27,7 @@ pkgver() {
     git describe --long --tags | sed 's/^v//g' | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
