--- a/aur-repo/cangaroo/PKGBUILD
+++ b/aur-repo/cangaroo/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=cangaroo
 pkgver=0.2.2.r64.gca7f907
 pkgrel=8
 pkgdesc="Open source can bus analyzer software - with support for CANable / CANable2, CANFD, and other new features"
-arch=(aarch64
-	riscv64
-	x86_64)
+arch=($CARCH)
 license=('GPL-2.0-only')
 depends=(
 	bash
