--- a/aur-repo/ch34xsercfg-git/lilac.yaml
+++ b/aur-repo/ch34xsercfg-git/lilac.yaml
@@ -1,7 +1,7 @@
 maintainers:
   - github: taotieren
-build_prefix: extra-x86_64
-pre_build: vcs_update
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
 repo_depends:
   - libch9344ser-git
   - libch343ser-git
