--- a/aur-repo/chinesechess-git/PKGBUILD
+++ b/aur-repo/chinesechess-git/PKGBUILD
@@ -5,9 +5,7 @@ _pkgname=ChineseChess
 pkgver=6.3.r0.gc2c5681
 pkgrel=7
 pkgdesc="Cross-platform and online battle platform game based on Qt: Chinese Chess. Also known as:『Xiangqi』『中国象棋』"
-arch=(aarch64
-    riscv64
-    x86_64)
+arch=($CARCH)
 license=('GPL-3.0-only')
 _qt=qt5
 depends=(
