--- a/aur-repo/coreboot-utils/lilac.yaml
+++ b/aur-repo/coreboot-utils/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='slact')
+pre_build_script: aur_pre_build(maintainers=['slact'])
 post_build: aur_post_build
 update_on:
   - source: aur
