--- a/aur-repo/fantascene-dynamic-wallpaper/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=fantascene-dynamic-wallpaper
 pkgver=1.9.7
 pkgrel=1
 pkgdesc="dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/dependon/fantascene-dynamic-wallpaper"
 license=('GPL-3.0-only')
 provides=(${pkgname})
@@ -17,7 +15,7 @@ depends=(mpv
 makedepends=(pkgconfig
     qt5-tools
     make)
-source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz" )
+source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/${pkgver}.tar.gz")
 sha256sums=('e7d72a509330f46d66a3c427ed1f4c378e38b23a086ee5adb5d8ed017eda8ce8')
 
 build() {
@@ -28,5 +26,5 @@ build() {
 
 package() {
     cd "${srcdir}/${pkgname}-${pkgver}"
-    make INSTALL_ROOT="$pkgdir"  -C ./build install
+    make INSTALL_ROOT="$pkgdir" -C ./build install
 }
