--- a/aur-repo/crm/PKGBUILD
+++ b/aur-repo/crm/PKGBUILD
@@ -4,15 +4,14 @@ pkgname=crm
 pkgver=0.2.2
 pkgrel=1
 pkgdesc="crm (Cargo registry manager)"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/wtklbm/crm"
 license=('MIT' 'Apache-2.0')
 provides=(${pkgname})
 conflicts=(${pkgname})
 replaces=()
-depends=(gcc-libs
+depends=(
+    gcc-libs
     glibc)
 makedepends=(cargo)
 backup=()
