--- a/aur-repo/deeplx-git/PKGBUILD
+++ b/aur-repo/deeplx-git/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=deeplx-git
 pkgver=1.0.1.r0.gb04139e
 pkgrel=1
 pkgdesc="DeepL Free API (No TOKEN required)"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/OwO-Network/DeepLX"
 license=('MIT')
 provides=(${pkgname%-git})
@@ -21,7 +19,7 @@ install=${pkgname}.install
 source=("${pkgname}::git+${url}.git"
     ${pkgname}.install)
 sha256sums=('SKIP'
-            '3962c9e75073e0dac0088a55d3574cc8cb104031837876422281081a32d332d3')
+    '3962c9e75073e0dac0088a55d3574cc8cb104031837876422281081a32d332d3')
 
 export CGO_CPPFLAGS="${CPPFLAGS}"
 export CGO_CFLAGS="${CFLAGS}"
@@ -35,9 +33,10 @@ prepare() {
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
-    ( set -o pipefail
+    (
+        set -o pipefail
         git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
-        printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
     )
 }
 
@@ -51,6 +50,6 @@ build() {
 package() {
     cd "${srcdir}/${pkgname}"
 
-    install -Dm755 build/DeepLX  ${pkgdir}/usr/bin/${pkgname%-git}
+    install -Dm755 build/DeepLX ${pkgdir}/usr/bin/${pkgname%-git}
     install -Dm0644 deeplx.service -t "${pkgdir}/usr/lib/systemd/system/"
 }
