--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=2.1.0.r265.gbdc143e1
 pkgrel=1
 epoch=
 pkgdesc="Qucs-S provides GUI for different circuit simulation kernels. "
-arch=('x86_64')
+arch=($CARCH)
 url="https://github.com/ra3xdh/qucs_s"
 license=('GPL-2.0-only')
 _qt=qt6
