--- a/aur-repo/serial-studio/PKGBUILD
+++ b/aur-repo/serial-studio/PKGBUILD
@@ -5,9 +5,7 @@ _pkgname=Serial-Studio
 pkgver=3.0.6
 pkgrel=2
 pkgdesc="Multi-purpose serial data visualization & processing program"
-arch=('x86_64'
-    'aarch64'
-    'riscv64')
+arch=($CARCH)
 url="https://github.com/Serial-Studio/Serial-Studio"
 license=('MIT')
 groups=()
