--- a/aur-repo/svdtools/PKGBUILD
+++ b/aur-repo/svdtools/PKGBUILD
@@ -6,16 +6,14 @@ pkgver=0.3.18
 pkgrel=1
 epoch=
 pkgdesc="svdtools is a set of tools for modifying vendor-supplied, often buggy SVD files. It can be imported as a library for use in other applications, or run directly via the included svdtools CLI utility."
-arch=(x86_64
-  aarch64
-  riscv64)
+arch=($CARCH)
 url="https://github.com/rust-embedded/svdtools"
 license=('MIT AND Apache-2.0')
 groups=()
 depends=(gcc-libs
   glibc)
 makedepends=(
-      cargo)
+  cargo)
 optdepends=('svd2rust: Generate Rust register maps (`struct`s) from SVD files')
 provides=(svdtools svdtools-rust)
 conflicts=(svdtools svdtools-rust)
@@ -33,13 +31,13 @@ export RUSTUP_TOOLCHAIN=stable
 export CARGO_TARGET_DIR=target
 
 build() {
-    cd "${srcdir}/${pkgbase}-${pkgver}"
+  cd "${srcdir}/${pkgbase}-${pkgver}"
 
-    cargo build --release --all-features
+  cargo build --release --all-features
 }
 
 package() {
-    cd "${srcdir}/${pkgbase}-${pkgver}"
+  cd "${srcdir}/${pkgbase}-${pkgver}"
 
-    cargo install --no-track --all-features --root "$pkgdir/usr/" --path .
+  cargo install --no-track --all-features --root "$pkgdir/usr/" --path .
 }
