--- a/aur-repo/smartdns-rs-git/PKGBUILD
+++ b/aur-repo/smartdns-rs-git/PKGBUILD
@@ -4,16 +4,16 @@ pkgname=smartdns-rs-git
 pkgver=0.6.5.r22.ga352d9f
 pkgrel=2
 pkgdesc="A cross platform local DNS server (Dnsmasq like) written in rust to obtain the fastest website IP for the best Internet experience, supports DoT, DoH. 一个用 Rust 编写的跨平台本地DNS服务器，获取最快的网站IP，获得最佳上网体验，支持DoH，DoT。"
-arch=('any')
+arch=($CARCH)
 url="https://github.com/mokeyish/smartdns-rs"
 license=('MIT' 'Apache-2.0' 'GPL-3.0-only')
 provides=(${pkgname%-git} ${pkgname%-rs-git})
 conflicts=(${pkgname%-git} ${pkgname%-rs-git})
 replaces=()
 depends=(cargo
-        systemd)
+    systemd)
 makedepends=(git
-            rust)
+    rust)
 backup=()
 options=('!lto')
 install=
@@ -31,8 +31,7 @@ pkgver() {
     git describe --long --tags | sed 's/v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname%-git}" clean -dfx
 }
 
