--- a/aur-repo/stc-isp-wine/lilac.yaml
+++ b/aur-repo/stc-isp-wine/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-build_prefix: multilib
+# build_prefix: multilib
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
 post_build_script: |
