--- a/aur-repo/sudo-rs/PKGBUILD
+++ b/aur-repo/sudo-rs/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=sudo-rs
 pkgver=0.2.3
 pkgrel=1
 pkgdesc="A safety oriented and memory safe implementation of sudo and su written in Rust."
-arch=('x86_64'
-    'aarch64'
-    'riscv64')
+arch=($CARCH)
 url="https://github.com/trifectatechfoundation/sudo-rs"
 license=('Apache-2.0 AND MIT')
 provides=(${pkgname})
