--- a/aur-repo/ts.net-git/PKGBUILD
+++ b/aur-repo/ts.net-git/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=r270.572df1d
 pkgrel=1
 epoch=
 pkgdesc="Thunderscope-compatible PC-host software written in C# using high-performing primitives & SIMD."
-arch=("x86_64" "aarch64")
+arch=($CARCH)
 url="https://github.com/EEVengers/TS.NET"
 license=('MIT')
 provides=(${pkgname%-git})
