--- a/aur-repo/xrock/PKGBUILD
+++ b/aur-repo/xrock/PKGBUILD
@@ -5,9 +5,7 @@ pkgver=1.1.2
 pkgrel=3
 epoch=
 pkgdesc="The low level tools for rockchip SOC with maskrom and loader mode support."
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/xboot/xrock"
 license=('MIT')
 groups=()
