--- a/aur-repo/tinybpt-git/PKGBUILD
+++ b/aur-repo/tinybpt-git/PKGBUILD
@@ -6,9 +6,7 @@ pkgrel=1
 epoch=
 pkgdesc="Tinybpt (Tiny Buildroot Packaging Tool) 是一个 buildroot 的包管理工具，主要处理 buildroot 的包依赖关系，提供包的安装、卸载等功能。"
 arch=(
-    'aarch64'
-    'riscv64'
-    'x86_64')
+    $CARCH)
 url="https://gitee.com/tinylab/buildroot-toolkit"
 license=(GPL-2.0-or-later)
 groups=()
