--- a/aur-repo/translater-git/PKGBUILD
+++ b/aur-repo/translater-git/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=translater-git
 pkgver=0.6.2.r1.gb3ea816
 pkgrel=2
 pkgdesc="command line translate tools, Use headless firefox internally, support Linux/Mac for now."
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/crystal-china/translater"
 license=('MIT')
 provides=(${pkgname%-git})
@@ -39,9 +37,10 @@ prepare() {
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
-    ( set -o pipefail
+    (
+        set -o pipefail
         git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
-        printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
     )
 }
 
