--- a/aur-repo/ttf-lxgw-wenkai-lite/lilac.yaml
+++ b/aur-repo/ttf-lxgw-wenkai-lite/lilac.yaml
@@ -1,6 +1,5 @@
 maintainers:
   - github: taotieren
-build_prefix: extra-x86_64
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
 post_build_script: |
@@ -9,7 +8,7 @@ post_build_script: |
 update_on:
   - source: github
     github: lxgw/LxgwWenKai-Lite
-    use_max_tag: true
+    use_latest_release: true
     prefix: v
-    # use_latest_release: true
+    # use_max_tag: true
     # prefix: v
