--- a/aur-repo/ufprog-git/PKGBUILD
+++ b/aur-repo/ufprog-git/PKGBUILD
@@ -6,9 +6,7 @@ pkgver=1.0.2023.09.18.r77.gb3f0d64
 pkgrel=4
 groups=()
 pkgdesc="Universal Flash Programmer - SPI-NOR/NAND ECC/SPI-NAND/WCH CH341 CH347/FTDI MPSSE FT232H FT2232H FT4232H FT4222H/SPI (Single/Dual/Quad/QPI using SPI-MEM)"
-arch=(x86_64
-  aarch64
-  riscv64)
+arch=($CARCH)
 url="https://github.com/hackpascal/ufprog"
 license=('GPL-2.0-only AND LGPL-2.0-only')
 provides=(${pkgname%-git})
@@ -28,14 +26,14 @@ sha256sums=('SKIP')
 
 pkgver() {
     cd "${srcdir}/${pkgname}"
-    ( set -o pipefail
+    (
+        set -o pipefail
         git describe --long --tag --abbrev=7 2>/dev/null | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g' ||
-        printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
+            printf "r%s.%s" "$(git rev-list --count HEAD)" "$(git rev-parse --short=7 HEAD)"
     )
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
@@ -43,10 +41,10 @@ build() {
     cd "${srcdir}/${pkgname}"
 
     cmake -DCMAKE_BUILD_TYPE=None \
-    -DBUILD_PORTABLE=OFF \
-    -DCMAKE_INSTALL_PREFIX=/usr \
-    -B build \
-    -G Ninja
+        -DBUILD_PORTABLE=OFF \
+        -DCMAKE_INSTALL_PREFIX=/usr \
+        -B build \
+        -G Ninja
 
     ninja -C build
 }
