--- a/aur-repo/unshc/PKGBUILD
+++ b/aur-repo/unshc/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=0.8
 pkgrel=24
 epoch=
 pkgdesc="UnSHc is a tool to reverse the encryption of any SHc encrypted *.sh.x script. (shc < 4.0.3)"
-arch=('x86_64')
+arch=($CARCH)
 url="https://github.com/yanncam/UnSHc"
 license=('GPL-3.0-only')
 groups=()
