--- a/aur-repo/upd72020x-fw/lilac.yaml
+++ b/aur-repo/upd72020x-fw/lilac.yaml
@@ -4,4 +4,4 @@ pre_build_script: aur_pre_build(maintainers=['redchenjs'])
 post_build: aur_post_build
 update_on:
   - source: aur
-    github: upd72020x-fw
+    aur: upd72020x-fw
