--- a/aur-repo/vtable-dumper/lilac.yaml
+++ b/aur-repo/vtable-dumper/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
 pre_build_script: aur_pre_build(maintainers='mbloms')
-
 post_build: aur_post_build
-
 update_on:
   - source: aur
-    github: vtable-dumper
+    aur: vtable-dumper
