--- a/aur-repo/wlink-git/PKGBUILD
+++ b/aur-repo/wlink-git/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=wlink-git
 pkgver=0.1.0.r0.g42127dc
 pkgrel=1
 pkgdesc="wlink - WCH-Link(RV) command line tool"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/ch32-rs/wlink"
 license=('Apache-2.0' 'MIT')
 provides=(${pkgname%-git})
