--- a/aur-repo/wlink/PKGBUILD
+++ b/aur-repo/wlink/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=wlink
 pkgver=0.1.1
 pkgrel=2
 pkgdesc="wlink - WCH-Link(RV) command line tool"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/ch32-rs/wlink"
 license=('Apache-2.0' 'MIT')
 provides=(${pkgname})
