--- a/aur-repo/xbydriver-appimage/lilac.yaml
+++ b/aur-repo/xbydriver-appimage/lilac.yaml
@@ -1,18 +1,13 @@
 maintainers:
   - github: taotieren
-
-build_prefix: extra-x86_64
-
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 update_on:
   - source: github
     github: gaozhangmin/aliyunpan
-    # use_latest_release: true
-    use_max_tag: true
+    use_latest_release: true
     prefix: v
+    # use_max_tag: true
