--- a/aur-repo/xfel/PKGBUILD
+++ b/aur-repo/xfel/PKGBUILD
@@ -5,9 +5,7 @@ pkgver=1.3.2
 pkgrel=18
 epoch=
 pkgdesc="Tiny FEL tools for allwinner SOC, support RISC-V D1 chip."
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/xboot/xfel"
 license=('MIT')
 groups=()
