--- a/aur-repo/xguipro/PKGBUILD
+++ b/aur-repo/xguipro/PKGBUILD
@@ -5,12 +5,7 @@ pkgname=(xguipro-gtk3)
 pkgver=0.8.4
 pkgrel=3
 pkgdesc="xGUI (the X Graphics User Interface) Pro is a modern, cross-platform, and advanced HVML renderer which is based on tailored WebKit."
-arch=(x86_64
-    aarch64
-    riscv64
-    mips64
-    powerpc
-    powerpc64le)
+arch=($CARCH)
 url="https://github.com/HVML/xGUI-Pro"
 license=('LGPL-3.0-only')
 groups=(hvml
