--- a/aur-repo/xunlei-bin/lilac.yaml
+++ b/aur-repo/xunlei-bin/lilac.yaml
@@ -4,4 +4,4 @@ pre_build_script: aur_pre_build(maintainers='sukanka')
 post_build: aur_post_build
 update_on:
   - source: aur
-    github: xunlei-bin
+    aur: xunlei-bin
