--- a/aur-repo/yoctools/PKGBUILD
+++ b/aur-repo/yoctools/PKGBUILD
@@ -7,7 +7,7 @@ pkgrel=2
 epoch=
 pkgdesc="(Yun on Chip) 以极简开发为理念，以 CPU 架构、芯片平台、操作系统、云服务和开发套件为基础，助力开发者从芯片到云的全链路高效设计，是面向 IoT 领域的全栈技术平台"
 # arch=('any')
-arch=('x86_64')
+arch=($CARCH)
 url="https://pypi.org/project/yoctools/"
 license=('BSD-2-Clause')
 groups=()
