--- a/aur-repo/n-m3u8dl-re-bin/PKGBUILD
+++ b/aur-repo/n-m3u8dl-re-bin/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=n-m3u8dl-re-bin
-pkgver=0.2.1_beta
-pkgrel=3
+pkgver=0.3.0_beta
+pkgrel=1
 epoch=
 pkgdesc="Cross-Platform, beautiful and powerful stream downloader for DASH/HLS. "
 arch=('x86_64')
@@ -11,14 +11,15 @@ license=('MIT')
 provides=(${pkgname%-bin})
 conflicts=(${pkgname%-bin})
 replaces=()
-depends=()
+depends=(
+    glibc)
 makedepends=()
 backup=()
 options=('!strip' '!debug' '!lto')
-_time=20240828
-source=("${pkgname%-bin}-${pkgver}.tar.gz::${url}/releases/download/v${pkgver/_/-}/N_m3u8DL-RE_Beta_linux-x64_${_time}.tar.gz")
+_time=20241203
+source=("${pkgname%-bin}-${pkgver/_/-}.tar.gz::${url}/releases/download/v${pkgver/_/-}/N_m3u8DL-RE_v${pkgver%_beta}-Beta_linux-x64_${_time}.tar.gz")
 sha256sums=('4cea485a17a5bb91a34b310bb5a5d385a23b69cec970753053d83b25b466baea')
 
 package() {
-    install -Dm755 "${srcdir}/N_m3u8DL-RE_Beta_linux-x64/N_m3u8DL-RE" "${pkgdir}/usr/bin/${pkgbase%-bin}"
+    install -Dm755 "${srcdir}/N_m3u8DL-RE" "${pkgdir}/usr/bin/${pkgbase%-bin}"
 }
