--- a/aur-repo/pcbdraw/lilac.yaml
+++ b/aur-repo/pcbdraw/lilac.yaml
@@ -1,10 +1,9 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['mrrb'])
+pre_build_script: aur_pre_build(maintainers='mrrb')
 post_build: aur_post_build
 repo_depends:
   - python-svgpathtools
 update_on:
   - source: aur
-    aur: pcbdraw
-  - alias: python
+    aur: ozone
