--- a/aur-repo/python-cu2qu-git/lilac.yaml
+++ b/aur-repo/python-cu2qu-git/lilac.yaml
@@ -5,6 +5,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - python-pytest-runner
 update_on:
   - source: github
     github: googlefonts/cu2qu
