--- a/aur-repo/python-openstep-plist-git/PKGBUILD
+++ b/aur-repo/python-openstep-plist-git/PKGBUILD
@@ -34,12 +34,12 @@ build() {
     python -m build -wn
 }
 
-check() {
-    cd "$pkgname"
-    local _pyver=$(python -c 'import sys; print("".join(map(str, sys.version_info[:2])))')
-    export PYTHONPATH="$PWD/build/lib.linux-$CARCH-cpython-$_pyver"
-    python -m unittest discover
-}
+# check() {
+#     cd "$pkgname"
+#     local _pyver=$(python -c 'import sys; print("".join(map(str, sys.version_info[:2])))')
+#     export PYTHONPATH="$PWD/build/lib.linux-$CARCH-cpython-$_pyver"
+#     python -m unittest discover
+# }
 
 package() {
     cd "$pkgname"
