--- a/aur-repo/afdko/lilac.yaml
+++ b/aur-repo/afdko/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['alerque'])
 post_build: aur_post_build
+repo_depends:
+  - python-ufonormalizer
 update_on:
   - source: aur
     aur: afdko
