autofilm-git: auto updated to 1.2.5.r47.ga25b0aa-1

--- a/aur-repo/autofilm-git/PKGBUILD
+++ b/aur-repo/autofilm-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=autofilm-git
-pkgver=1.2.5.r36.g71d73d8
-pkgrel=2
+pkgver=1.2.5.r47.ga25b0aa
+pkgrel=1
 pkgdesc="A small project to provide Strm direct-link playback for Emby and Jellyfin servers, recommended for use with MediaWarp."
 arch=(x86_64
     aarch64
