--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -8,4 +8,4 @@ post_build_script: |
 update_on:
   - source: regex
     url: "https://down.115.com/client/115pc/lin/"
-    regex: '/115br_v([\\d.]+)\\.deb'
+    regex: '/115br_v([\d.]+).deb'
