--- a/aur-repo/n-m3u8dl-re-bin/PKGBUILD
+++ b/aur-repo/n-m3u8dl-re-bin/PKGBUILD
@@ -1,7 +1,9 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=n-m3u8dl-re-bin
-pkgver=0.3.0_beta
+_tagname='0.3.0-beta'
+# pkgver=0.3.0_beta
+pkgver="${_tagname//-/}"
 pkgrel=2
 epoch=
 pkgdesc="Cross-Platform, beautiful and powerful stream downloader for DASH/HLS. "
