--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -6,6 +6,6 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 update_on:
-  - source: regex
+- source: regex
     url: "https://115.com/product_browser"
-    regex: 'https:\/\/down\.115\.com\/client\/115pc\/lin\/115br_v([\d.]+).deb'
+    regex: '115br_v([\d.]+).deb'
