--- a/aur-repo/rttview/lilac.yaml
+++ b/aur-repo/rttview/lilac.yaml
@@ -12,6 +12,8 @@ update_on:
   - source: github
     github: XIVN1987/RTTView
     use_max_tag: true
+    # 20241201
+    include_regex: (\d+)
   - alias: python
     # prefix: v
     # use_latest_release: true
