--- a/aur-repo/ts.net-git/lilac.yaml
+++ b/aur-repo/ts.net-git/lilac.yaml
@@ -3,7 +3,9 @@ maintainers:
 pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
-  update_aur_repo()
+repo_depends:
+  - dotnet-host-bin
+  - dotnet-sdk-bin
 update_on:
   - source: github
     github: EEVengers/TS.NET
